# claude-window-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.command  setup.py
scripts/: build.sh
src/claude_window_manager/: __init__.py  app.py  app_pystray.py  cli.py  iterm2_integration.py  session.py  window_detector.py
