[project]
name = "claude-window-manager"
version = "0.1.0"
description = "macOS menu bar app to manage Claude Code windows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "korengast" }]
dependencies = [
    "rumps>=0.4.0",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "py2app>=0.28.0",
    "pytest>=7.0.0",
]

[project.scripts]
claude-wm = "claude_window_manager.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
